# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  config.py  database.py  normalize_ur.py  normalize_url.py  parser_bs4.py  unit.py  utils.py  validator.py
page_analyzer/templates/: 404.html  all_urls.html  index.html  one_url.html
