[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
authors = ["Viktor Romanov <075viktor@mail.ru>"]
readme = "README.md"
repository = "https://github.com/qffo/python-project-83"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
